--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,5 @@ dependencies {
     //compile 'com.fasterxml.jackson.core:jackson-core:2.9.4'
     //compile 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
