--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    //compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
