--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 .idea/**/gradle.xml
 .idea/**/libraries
 
+# Generated files
+.idea/**/contentModel.xml
+
 # Log file
 *.log
 
@@ -48,3 +51,4 @@ src/test/
 .DS_Store
 src/.DS_Store
 src/main/.DS_Store
+/.idea/sqldialects.xml
