--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,18 @@ apply plugin: 'war'
 repositories {
     mavenCentral()
 }
+test {
+    useJUnitPlatform()
+}
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.13.1'
-
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'junit:junit:4.13.2'
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
-    compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation 'com.google.code.gson:gson:2.9.0'
-    compile 'javax.mail:mail:1.4.7'
-    compile 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'javax.mail:mail:1.4.7'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
 }
